# internal/handler/v1/srvc_interface.go
@@ -11,8 +11,10 @@ type (
 		List(ctx context.Context, page, count int, filters, sorts map[string]string) ([]model.User, *dto.Pagination, error)
 		Create(ctx context.Context, email, name, password string) (*model.User, error)
 		GetByID(ctx context.Context, id string) (*model.User, error)
-		Update(ctx context.Context, id, name string, roleIDs []string) (*model.User, error)
+		Update(ctx context.Context, id, name string) (*model.User, error)
 		Delete(ctx context.Context, id string) error
+		AddRole(ctx context.Context, id, roleID string) (*model.User, error)
+		RemoveRole(ctx context.Context, id, roleID string) (*model.User, error)
 	}
 
 	AuthSrvc interface {
